[project]
name = "twg"
version = "2.0.0"
description = "Inspect. Navigate. Understand. A modern, terminal-based data explorer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.41.0",
    "ijson>=3.2.0",
    "pyperclip>=1.8.2",
    "json-repair>=0.30.0",
    "rich>=13.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
twig = "twg.ui.app:run"
twg = "twg.ui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

