[project]
name = "twg"
version = "2.1.4"
description = "Terminal-based JSON & YAML viewer (TUI) for exploring and searching large files — fast, interactive, and privacy-first."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.41.0",
    "ijson>=3.2.0",
    "pyperclip>=1.8.2",
    "json-repair>=0.30.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "json",
    "yaml",
    "viewer",
    "explorer",
    "terminal",
    "tui",
    "cli",
    "kubernetes",
    "log-viewer",
    "data-analysis",
    "developer-tools"
]

[project.scripts]
twig = "twg.ui.app:run"
twg = "twg.ui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

authors = [
  { name = "Shubham Kumar" },
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://twig.wtf/"
Documentation = "https://twig.wtf/guide"
Repository = "https://github.com/workdone0/twig"
Issues = "https://github.com/workdone0/twig/issues"
